attendance policy done

--- a/WebApp/src/app/features/attendance/attendance-policy/attendance-policy.component.html
+++ b/WebApp/src/app/features/attendance/attendance-policy/attendance-policy.component.html
@@ -342,8 +342,18 @@
                 <p-confirmPopup key="approve"></p-confirmPopup>
                 <p-confirmPopup key="delete"></p-confirmPopup>
                 <p-confirmPopup key="copy"></p-confirmPopup>
-                <p-table [value]="AttendancePolicies" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
-                         [(selection)]="selectedPolicy" dataKey="attendance_policy_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                <p-table #dt1 [value]="AttendancePolicies" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedPolicy" dataKey="attendance_policy_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" [globalFilterFields]="['policy_name']">
+                    <ng-template pTemplate="caption">
+                        <div class="flex">
+
+                            <span class="p-input-icon-left ml-auto">
+                                <i class="pi pi-search"></i>
+                                <input pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search By Policy" />
+                            </span>
+                        </div>
+                    </ng-template>
+
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Policy Name</th>
