Dealer Credit approved done

--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -960,8 +960,7 @@
 
                                     </div>
                                     <div class="field col-12 md:col-3">
-                                        <input type="file" class="from-control" formControlName="FileUpload" (change)="creditFormFileInput($event.target.files)" placeholder="" pInputText required />
-
+                                        <input type="file" class="from-control" formControlName="AttachmentFile" (change)="creditFormFileInput($event.target.files)" placeholder="" pInputText required />
                                     </div>
                                     <div class="field col-12 md:col-1">
                                         <button pButton pRipple type="button" (click)="SaveDealerCreditInfo()" label="Add" class=" risBtn risAdd mr-2 mb-2" icon="pi pi-plus"></button>
