--- a/WebApp/src/app/features/administrative/organogram/organogram.component.html
+++ b/WebApp/src/app/features/administrative/organogram/organogram.component.html
@@ -8,7 +8,7 @@
                         <div class="col-12">
                             <div class="p-fluid p-formgrid grid">
 
-                                <div class="field col-6 md:col-6">
+                                <div class="field col-6 md:col-6"  [hidden]="isShowGroupCompany">
                                     <div class="field col-12 md:col-12">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Group Name" tooltipPosition="top">Group</label>
                                         <input id="float-input p-fluid" disabled type="text" formControlName="Group" pInputText>
@@ -20,7 +20,7 @@
                                     </div>
 
                                 </div>
-                                <div class="field col-6 md:col-6">
+                                <div class="field col-6 md:col-6"  [hidden]="isShowCodeLocations">
                                     <div class="field col-12 md:col-12">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Organogram Code" tooltipPosition="top">Code</label>
                                         <input id="float-input p-fluid" type="text" formControlName="organogram_code" pInputText>
@@ -30,13 +30,14 @@
                                         <input id="float-input p-fluid" disabled type="text" formControlName="location_name" pInputText>
                                     </div>
                                 </div>
-                                <!--<div class="field col-12 md:col-12">
+                                <div class="field col-12 md:col-12"  [hidden]="isShowParrentDepartment">
+                                    <label for="" class=" d-md-inline-flex" pTooltip="Department" tooltipPosition="top">Department</label>
 
-
-                                </div>-->
+                                    <input id="float-input p-fluid" disabled type="text" formControlName="department" pInputText>
+                                </div>
                                 <div class="field col-6 md:col-6">
                                     <div class="field col-12 md:col-12">
-                                        <label for="" class=" d-md-inline-flex" pTooltip="Department" tooltipPosition="top">Department<span class="req">*:</span></label>
+                                        <label for="" class=" d-md-inline-flex" pTooltip="Department" tooltipPosition="top">Department2<span class="req">*:</span></label>
 
                                         <!--<input id="float-input p-fluid" type="text" formControlName="department" pInputText>-->
                                         <p-dropdown [options]="drpdwnDepartmentList" formControlName="department_id" placeholder="--Select--" [ngClass]="{ 'is-invalid': submitted && f.department_id.errors }"
